icon changes to red/green on site dubitable/credible. still need to revert it to green on new sites, do code cleanup, but this is 0.50

--- a/Source/popup.html
+++ b/Source/popup.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head><title>Dubitable</title></head>
+  <head>
+    <title>Dubitable</title>
+    <script src="popup.js"></script>
+  </head>
 
   <body>
-    <div style="width:160px; height:20px">
-      <p id="alertParagraph" rows="4" cols="50">Default Text</p>
+    <div style="width:160px; height:40px">
+      <p id="alertParagraph">Default Text</p>
     </div>
-
-    <script src="popup.js"></script>
   </body>
 </html>
