--- a/Source/popup.html
+++ b/Source/popup.html
@@ -6,8 +6,10 @@
   </head>
 
   <body>
-    <div style="width:160px; height:40px">
-      <p id="alertParagraph">Default Text</p>
+    <div style="width:240px; height:60px">
+      <p style:"width: 100%; height: 50%" id="alertParagraph"></p>
+      <hr>
+      <p style:"width: 100%; height: 50%" id="syncMessageParagraph"></p>
     </div>
   </body>
 </html>
