added sync now button, which will also update latest sync message in popup

--- a/Source/popup.html
+++ b/Source/popup.html
@@ -7,9 +7,10 @@
 
   <body>
     <div style="width:240px; height:60px">
-      <p style:"width: 100%; height: 50%" id="alertParagraph"></p>
+      <p style="width: 100%; height: 50%" id="alertParagraph"></p>
       <hr>
-      <p style:"width: 100%; height: 40%" id="syncMessageParagraph"></p>
+      <p style="width: 100%; height: 45%" id="syncMessageParagraph"></p>
+      <button type="button" style="width: 100%; height: 5%" id="syncNowButton">Sync Now</button>
     </div>
   </body>
 </html>
