--- a/Source/popup.html
+++ b/Source/popup.html
@@ -7,58 +7,63 @@
   </head>
 
   <body>
-    <div style="width:240px; height:60px">
+    <div style="width:240px">
       <p style="width: 100%; height: 50%" id="alertParagraph"></p>
-      <table style="width: 95%" border="1" id="tagsTable">
+      <table id="tagsTable">
         <tr>
-          <td>Fake News</td>
-          <td>Sources that entirely fabricate information, disseminate deceptive content, or grossly distort actual news reports.</td>
+          <th>Tag</th>
+          <th>Description</th>
         </tr>
-        <tr>
-          <td>Satire</td>
-          <td>Sources that come from a particular point of view and may rely on propaganda, decontextualized information, and opinions distorted as facts.</td>
-        </tr>
-        <tr>
-          <td>Extreme Bias</td>
-          <td>Sources that use humor, irony, exaggeration, ridicule, and false information to comment on current events.</td>
-        </tr>
-        <tr>
-          <td>Conspiracy Theory</td>
-          <td>Sources that are well-known promoters of kooky conspiracy theories.</td>
-        </tr>
-        <tr>
-          <td>Rumor Mill</td>
-          <td>SSources that traffic in rumors, gossip, innuendo, and unverified claims.</td>
-        </tr>
-        <tr>
-          <td>State News</td>
-          <td>Sources in repressive states operating under government sanction.</td>
-        </tr>
-        <tr>
-          <td>Junk Science</td>
-          <td>Sources that promote pseudoscience, metaphysics, naturalistic fallacies, and other scientifically dubious claims.</td>
-        </tr>
-        <tr>
-          <td>Hate News</td>
-          <td>Sources that actively promote racism, misogyny, homophobia, and other forms of discrimination.</td>
-        </tr>
-        <tr>
-          <td>Clickbait</td>
-          <td>Sources that provide generally credible content, but use exaggerated, misleading, or questionable headlines, social media descriptions, and/or images.</td>
-        </tr>
-        <tr>
-          <td>Proceed With Caution</td>
-          <td>Sources that may be reliable but whose contents require further verification.</td>
-        </tr>
-        <tr>
-          <td>Political</td>
-          <td>Sources that provide generally verifiable information in support of certain points of view or political orientations.</td>
-        </tr>
-        <tr>
+        <tr id="credible">
           <td>Credible</td>
           <td>Sources that circulate news and information in a manner consistent with traditional and ethical practices in journalism</td>
         </tr>
+        <tr id="fake">
+          <td>Fake News</td>
+          <td><font>Sources that entirely fabricate information, disseminate deceptive content, or grossly distort actual news reports.</font></td>
+        </tr>
+        <tr id="satire">
+          <td>Satire</td>
+          <td>Sources that come from a particular point of view and may rely on propaganda, decontextualized information, and opinions distorted as facts.</td>
+        </tr>
+        <tr id="bias">
+          <td>Extreme Bias</td>
+          <td>Sources that use humor, irony, exaggeration, ridicule, and false information to comment on current events.</td>
+        </tr>
+        <tr id="conspiracy">
+          <td>Conspiracy Theory</td>
+          <td>Sources that are well-known promoters of kooky conspiracy theories.</td>
+        </tr>
+        <tr id="rumor">
+          <td>Rumor Mill</td>
+          <td>SSources that traffic in rumors, gossip, innuendo, and unverified claims.</td>
+        </tr>
+        <tr id="state">
+          <td>State News</td>
+          <td>Sources in repressive states operating under government sanction.</td>
+        </tr>
+        <tr id="junksci">
+          <td>Junk Science</td>
+          <td>Sources that promote pseudoscience, metaphysics, naturalistic fallacies, and other scientifically dubious claims.</td>
+        </tr>
+        <tr id="hate">
+          <td>Hate News</td>
+          <td>Sources that actively promote racism, misogyny, homophobia, and other forms of discrimination.</td>
+        </tr>
+        <tr id="clickbait">
+          <td>Clickbait</td>
+          <td>Sources that provide generally credible content, but use exaggerated, misleading, or questionable headlines, social media descriptions, and/or images.</td>
+        </tr>
+        <tr id="unreliable">
+          <td>Proceed With Caution</td>
+          <td>Sources that may be reliable but whose contents require further verification.</td>
+        </tr>
+        <tr id="political">
+          <td>Political</td>
+          <td>Sources that provide generally verifiable information in support of certain points of view or political orientations.</td>
+        </tr>
       </table>
+      <hr>
       <p style="width: 100%; height: 45%" id="syncMessageParagraph"></p>
       <button type="button" style="width: 100%; height: 5%" id="syncNowButton">Sync Now</button>
     </div>
